--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="css/clean-blog.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -42,7 +42,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">Girls Coding Day</a>
+                <a class="navbar-brand" href="index.html">这是一个静态网站</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -60,6 +60,9 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
+                    <li>
+                        <a href=" https://girlscodingday.org/">报名Girls Coding Day</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -69,14 +72,19 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/home-bg.jpg')">
+    <header class="intro-header" style="background-image: url('img/karsten-wurth-126084.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1>Clean Blog</h1>
+                        <h1>Girls Coding Day</h1>
+                        <h3>我也愿意贡献力量帮助更多的女性学习编程</h3>
                         <hr class="small">
-                        <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
+                        <span class="subheading">  
+                          <a href="https://startbootstrap.com/template-overviews/clean-blog/">
+                              本<b>博客</b>使用Bootstrap模板<i>制作</i>
+                          </a>
+                        </span>
                     </div>
                 </div>
             </div>
