--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
                         <h1>Girls Coding Day</h1>
                         <h3>我也愿意贡献力量帮助更多的女性学习编程</h3>
                         <hr class="small">
-                        <span class="subheading">  
+                        <span class="subheading">
+                          本<b>博客</b>使用
                           <a href="https://startbootstrap.com/template-overviews/clean-blog/">
-                              本<b>博客</b>使用Bootstrap模板<i>制作</i>
+                              Bootstrap
                           </a>
+                          模板<i>制作</i>
                         </span>
                     </div>
                 </div>
